Add Image Storage

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -24,5 +24,11 @@
         }
       }
     }
+  },
+  "storage": {
+    "kjimagestore": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
